# ung-ai-assistant

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/routers/: chat.py
backend/app/services/: embedding.py  llm.py  retrieval.py
backend/tests/: test_main.py
data/: README.md
docs/: ARCHITECTURE.md  ROLES.md  TECH_STACK.md
docs/ui-designs/: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
