[tool.poetry]
package-mode = false
name = "ung-ai-assistant-backend"
version = "0.1.0"
description = "Backend API for the UNG AI Academic Assistant"
authors = ["UNG AI Lab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
